no ssl certs =<

--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -67,4 +67,6 @@ COPY $HUDSON_TASKS_FILE /var/jenkins_home/hudson.tasks.Maven.xml
 COPY $JOBS_DIR /var/jenkins_home/jobs
 COPY $PKCS12_FILE /var/jenkins_home/$PKCS12_FILE
 
-ENV JENKINS_OPTS="--httpPort=$HTTP_PORT --httpsPort=$HTTPS_PORT --httpsKeyStore=/var/jenkins_home/$PKCS12_FILE --httpsKeyStorePassword=$PKCS12_PASS"
+# bad idea to have env here.  Use environment in entrypoint
+# may not have ssl. like integration
+#ENV JENKINS_OPTS="--httpPort=$HTTP_PORT --httpsPort=$HTTPS_PORT --httpsKeyStore=/var/jenkins_home/$PKCS12_FILE --httpsKeyStorePassword=$PKCS12_PASS"
