ah checkout updates after a build attempt and parameters are visible in jenkins UI.  Sweet.

--- a/jenkins-docker-remodeled/jenkinsfile
+++ b/jenkins-docker-remodeled/jenkinsfile
@@ -1,8 +1,16 @@
 pipeline {
     agent any
     
+    parameters {
+        choice(name: 'BRANCH', choices: ['master', 'develop', 'some-architecture-work'], description: 'Select the branch to build')
+    }
     
     stages {
+        stage('Checkout') {
+            steps {
+                git branch: params.BRANCH, url: 'https://github.com/hms-dbmi/avillachlab-jenkins-bdc-etl'
+            }
+        }
         
         stage('Build') {
             steps {
