--- a/jenkins-docker-remodeled/jenkinsfile
+++ b/jenkins-docker-remodeled/jenkinsfile
@@ -35,14 +35,14 @@ pipeline {
                         aws --region us-east-1 s3 cp "${jenkins_config_s3_location}" ./config.xml
                         ls -la
                         docker build -f Dockerfile \
-                            --build-arg TERRAFORM_DISTRO=\"${CI_terraform_distro}\" \
-                            --build-arg CONFIG_XML_FILE=\"./config.xml\" \
-                            --build-arg PLUGINS_FILE=\"./plugins.txt\" \
-                            --build-arg SCRIPT_APPROVAL_FILE=\"./scriptApproval.xml\" \
-                            --build-arg JOBS_DIR=\"./jobs/\" \
-                            --build-arg PKCS12_FILE=\"\" \
-                            --build-arg PKCS12_PASS=\"\" \
-                            --build-arg HUDSON_TASKS_FILE=\"./hudson.tasks.Maven.xml\" \
+                            --build-arg TERRAFORM_DISTRO="${CI_terraform_distro}" \
+                            --build-arg CONFIG_XML_FILE="./config.xml" \
+                            --build-arg PLUGINS_FILE="./plugins.txt" \
+                            --build-arg SCRIPT_APPROVAL_FILE="./scriptApproval.xml" \
+                            --build-arg JOBS_DIR="./jobs/" \
+                            --build-arg PKCS12_FILE="" \
+                            --build-arg PKCS12_PASS="" \
+                            --build-arg HUDSON_TASKS_FILE="./hudson.tasks.Maven.xml" \
                             -t jenkins:${params.DOCKER_TAG} .
                         """
 
