Add S3 sync for Jenkins jobs and simplify Dockerfile setup
- Introduce `docker-compose-s3-sync.yaml` for syncing Jenkins jobs
  with S3, replacing local file-based initialization.
- Update `docker-compose.yml`:
    * Replace custom logic for syncing jobs with an S3-based approach.
    * Standardize services with consistent init and runtime behavior.
- Migrate Dockerfile to use `jenkins/jenkins:latest-jdk17`.
- Streamline AWS CLI installation and cleanup in Dockerfile.
- Consolidate plugin installations and optimize runtime configuration.

This simplifies environment setup, improves job persistence,
and enhances compatibility with newer Jenkins versions.

--- a/jenkins-docker/Dockerfile
+++ b/jenkins-docker/Dockerfile
@@ -1,9 +1,6 @@
-FROM jenkins/jenkins:latest-jdk11
+FROM jenkins/jenkins:latest-jdk17
 
-# user to swap easily between OS operations and jenkins configuration.
-ENV JENKINS_USERNAME=$USER
-# Disbale setup wizard
-ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
+ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 
 ARG TERRAFORM_DISTRO
 ARG PLUGINS_FILE
@@ -17,51 +14,42 @@ ARG PKCS12_PASS
 ARG HTTP_PORT=80
 ARG HTTPS_PORT=8080
 
-# Can use this to swap users back to jenkins user without hardcoding it.  Safe to hardcode swap to root user.
-###### OS configs and package installations ########
-# We could run these commands and build an image then configure jenkins only in this dockerfile instead of directly using the jenkins stock image
 USER root
 
-RUN apt-get update -y
-
-RUN apt-get -y install apt-transport-https \
-    python3-pip \
-    wget
-
-# maybe not the best way to install awscli
-# see https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html
-#RUN pip3 install --no-input awscli --upgrade
-RUN pip3 install --no-input awscli --upgrade --break-system-packages
-
-RUN set -e; \
+RUN apt-get update -y && \
+    apt-get install -y \
+    apt-transport-https \
+    wget \
+    jq \
+    maven && \
+    curl -fsSL https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip && \
+    unzip awscliv2.zip && \
+    ./aws/install && \
+    rm -rf awscliv2.zip aws && \
     curl -fsSL https://get.docker.com | sh && \
-    docker --version
+    docker --version && \
+    wget -q -O /opt/terraform.zip $TERRAFORM_DISTRO && \
+    unzip /opt/terraform.zip -d /usr/local/bin/ && \
+    rm -f /opt/terraform.zip && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/cache/apt/*
 
-# maven
-RUN apt-get -y install maven
-# jq
-RUN apt-get install jq -y
-# terraform
-RUN wget -c $TERRAFORM_DISTRO -O /opt/terraform.zip && \
-    unzip /opt/terraform.zip -d /usr/local/bin/ && rm -f /opt/terraform.zip
+USER jenkins
 
-# Cleanup
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/cache/apt/*
+RUN mkdir -p /var/jenkins_home
 
-##### Configuration for jenkins ###########
-USER $JENKINS_USERNAME
-
-# Copy CASC file
-COPY $CASC_FILE /var/jenkins_home/
-
-# Install Plugins.  If no plugins provided continue.
 COPY $PLUGINS_FILE /usr/share/jenkins/ref/plugins.txt
+RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
-RUN /bin/jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
-
-# Configurations
+COPY $CASC_FILE /var/jenkins_home/
 COPY $CONFIG_XML_FILE /var/jenkins_home/config.xml
 COPY $SCRIPT_APPROVAL_FILE /var/jenkins_home/scriptApproval.xml
 COPY $HUDSON_TASKS_FILE /var/jenkins_home/hudson.tasks.Maven.xml
 COPY $JOBS_DIR /var/jenkins_home/jobs
 COPY $PKCS12_FILE /var/jenkins_home/$PKCS12_FILE
+
+USER root
+RUN chown -R jenkins:jenkins /var/jenkins_home
+USER jenkins
+
+EXPOSE 80 8080
